--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -85,8 +85,8 @@
 								<div class="sub-head-list">University of Connecticut, College of Liberal Arts and Sciences</div>
 								<div class="sub-head-list">Fall 2015</div> 
 									<ul>
-										<li class="resume-list"><a href="diploma-uconn.pdf" target="_blank">Bachelor of Arts in History, Geographic Information Systems/Sciences (GIS) minor</a></li>
-										<li class="resume-list"><a href="honors-thesis.pdf" target="_blank">Honors Thesis: ClioGraphy, Historical Geospatial Analysis</a></li>
+										<li class="resume-list"><a href="diploma-uconn.pdf" target="_blank">Bachelor of Arts</a> in History, Geographic Information Systems/Sciences (GIS) minor</li>
+										<li class="resume-list"><a href="honors-thesis.pdf" target="_blank">Honors Thesis</a>: ClioGraphy, Historical Geospatial Analysis</li>
 									</ul>
 								<div class="sub-head-list">University of Vermont</div>
 								<div class="sub-head-list">Attended: 2011-2012</div>
@@ -111,7 +111,7 @@
 							<strong>University of Connecticut</strong>
 								<ul>
 									<li class="resume-list">University of Connecticut Honors Scholar Program: <span class="resume">March, 2014 - December, 2015</span></li>
-									<li class="resume-list"><a href="national-honors-society.pdf" target="_blank">Phi Alpha Theta History Honors Society: <span>Inducted May, 2014</span></a></li>
+									<li class="resume-list"><a href="national-honors-society.pdf" target="_blank">Phi Alpha Theta History Honors Society</a>: <span>Inducted May, 2014</span></li>
 								</ul>
 					</section>
 			<hr>
@@ -176,8 +176,8 @@
 								<div class="sub-head-list">Author, Presenter</div>
 								<div class="sub-head-list">05/13/2014</div>
 								<ul>
-									<li class="resume-list"><a href="http://magic.lib.uconn.edu/about_magic.html" target="_blank">Presentation title: Historians to Geographers: Using Maps to Illustrate Hartford’s Cultural Heritage</a></li>
-									<li class="resume-list">"Hartford’s rich cultural heritage involves a number of events which have a spatial connection, a connection which is illustrated with the Virtual Hartford project. This presentation will explore ideas and concepts that connect history with spatial location using maps, archives, and content. Utilizing collections from the Hartford History Center, Connecticut Historical Society, and the UConn Libraries MAGIC, this project connects archival content to maps to enable student and prospective researchers to reinterpret the history of Hartford, CT based on primary sources. Join us as we explore how to leverage ArcGIS, Google Maps, and Omeka Neatline to connect users with primary sources based on locations in Hartford, Connecticut." - Abstract</li>
+									<li class="resume-list"><a href="http://magic.lib.uconn.edu/about_magic.html" target="_blank">Presentation title</a>: Historians to Geographers: Using Maps to Illustrate Hartford’s Cultural Heritage</li>
+									<li class="resume-list">Abstract: Hartford’s rich cultural heritage involves a number of events which have a spatial connection, a connection which is illustrated with the Virtual Hartford project. This presentation will explore ideas and concepts that connect history with spatial location using maps, archives, and content. Utilizing collections from the Hartford History Center, Connecticut Historical Society, and the UConn Libraries MAGIC, this project connects archival content to maps to enable student and prospective researchers to reinterpret the history of Hartford, CT based on primary sources. Join us as we explore how to leverage ArcGIS, Google Maps, and Omeka Neatline to connect users with primary sources based on locations in Hartford, Connecticut.</li>
 								</ul>
 							<strong>Association for the Study of Connecticut History (ASCH) Conference</strong>
 								<div class="sub-head-list">Author, Presenter</div>
@@ -223,7 +223,8 @@
 								<div class="sub-head-list">Student Administrator</div>
 								<div class="sub-head-list">5/2014 – 5/2015</div>
 								<ul>
-									<li class="resume-list">Organized and maintaind museum files regarding different sponsored events</li>
+									<li class="resume-list">Organized and maintaind museum client files regarding different sponsored events</li>
+									<li class="resume-list">Proofread and peer-reviewed museum publications</li>
 								</ul>
 							<strong>Connecticut State Archeologist, Brian Jones</strong>
 								<div class="sub-head-list">Research Assistant, Online GIS</div>
@@ -232,11 +233,11 @@
 									<li class="resume-list">In collaboration with the Map and Geographic Information Center and Connecticut State Data Center, I developed an online interface to house and display data of the office of the Connecticut State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
 								</ul>
-							<strong>Geomorphology and Earth Processes Research Team</strong>
-								<div class="sub-head-list">Researcher, GIS Analyst, led by Professor Ouimet</div> 
+							<strong>Geomorphology and Earth Processes Research Team at University of Connecticut</strong>
+								<div class="sub-head-list">Researcher, GIS Analyst, led by <a href="http://geomorphology.uconn.edu/" target="_blank">Professor Ouimet</a></div> 
 								<div class="sub-head-list">06/10/2014 – 12/10/14</div>
 								<ul>
-									<li class="resume-list">Study the history, mechanics and evolution of landscapes at human timescales</li>
+									<li class="resume-list">Study the history, mechanics, and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
 							<strong>Connecticut State Data Center & Univ. Libraries’ Maps and Geographic Information Center</strong>
@@ -254,10 +255,11 @@
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
 									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
 								</ul>
-							<strong>Junior Accountant at Strictly Accounting: Bill Pay U.S.A.:</strong>
+							<strong>Strictly Accounting, CPA: Bill Pay U.S.A.</strong>
+								<div class="sub-head-list">Junior Accountant</div>
 								<div class="sub-head-list">2009 – 2011</div>
 								<ul>
-									<li class="resume-list">Processed tax returns, book-keeping for individuals and businesses and office/file maintenance</li>
+									<li class="resume-list">Processed tax returns, book-keeping for individuals and businesses, and office/file maintenance</li>
 								</ul>
 					</section>
 			<hr>
@@ -270,7 +272,7 @@
 						<h2 class="resume-headline">Computer Skills</h2>
 							<strong>Software Packages</strong>
 								<ul>
-									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">GIS & ArcGIS 10.4</a>; Adobe Photoshop; MS Office Suite 2013</li>
+									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">GIS & ESRI's ArcGIS (10.4)</a>; Adobe Photoshop; MS Office Suite 2013</li>
 								</ul>
 								<div></div>
 							<strong>Code Languages</strong>
