updated resume with links for work expereince

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -211,7 +211,7 @@
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
-							<strong>Redniss and Mead Land Use Consulting Firm</strong>
+							<strong><a href="http://rednissmead.com/" target="_blank">Redniss and Mead Land Use Consulting Firm</a></strong>
 								<div class="sub-head-list">Intern in Planning Department, GIS Specialist</div>
 								<div class="sub-head-list">09/2015 - 12/2015</div>
 								<ul>
@@ -219,7 +219,7 @@
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
 									<li class="resume-list">Researched land records and legal regulations pertinent to client properties in effort to draft regulation variances or project proposals</li>
 								</ul>
-							<strong>Connecticut State Museum of Natural History</strong>
+							<strong><a href="http://www.cac.uconn.edu/mnhhome.html" target="_blank">Connecticut State Museum of Natural History</a></strong>
 								<div class="sub-head-list">Student Administrator</div>
 								<div class="sub-head-list">5/2014 – 5/2015</div>
 								<ul>
@@ -233,14 +233,14 @@
 									<li class="resume-list">In collaboration with the Map and Geographic Information Center and Connecticut State Data Center, I developed an online interface to house and display data of the office of the Connecticut State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
 								</ul>
-							<strong>Geomorphology and Earth Processes Research Team at University of Connecticut</strong>
-								<div class="sub-head-list">Researcher, GIS Analyst, led by <a href="http://geomorphology.uconn.edu/" target="_blank">Professor Ouimet</a></div> 
+							<strong><a href="http://geomorphology.uconn.edu/" target="_blank">Geomorphology and Earth Processes Research Team</a> at University of Connecticut</strong>
+								<div class="sub-head-list">Researcher, GIS Analyst, led by Professor Ouimet</div> 
 								<div class="sub-head-list">06/10/2014 – 12/10/14</div>
 								<ul>
 									<li class="resume-list">Study the history, mechanics, and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
-							<strong>Connecticut State Data Center & Univ. Libraries’ Maps and Geographic Information Center</strong>
+							<strong><a href="http://ctsdc.uconn.edu/" target="_blank">Connecticut State Data Center</a> & <a href="http://magic.lib.uconn.edu/" target="_blank">Univ. Libraries’ Maps and Geographic Information Center (MAGIC)</a></strong>
 								<div class="sub-head-list">Census and Geospatial Data Assistant, Enterprise GIS Analyst, Historical GIS Specialist, GIS Analyst</div>
 								<div class="sub-head-list">10/2013 – 6/2014</div>
 								<ul>
@@ -248,14 +248,14 @@
 									<li class="resume-list">Focused on researching maps and associated textual documentation, georeferencing these maps to create workable primary source material for students studying Digital Humanities, creating metadata for georeferenced maps and datasets, and heads-up digitizing derivative data for historical analysis</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
 								</ul>
-							<strong>Virtual Hartford Research Team</strong>
+							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
 								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
 								<div class="sub-head-list">10/2013 – 12/2015</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
 									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
 								</ul>
-							<strong>Strictly Accounting, CPA: Bill Pay U.S.A.</strong>
+							<strong><a href="http://www.strictlyaccounting.com/" target="_blank">Strictly Accounting, CPA: Bill Pay U.S.A.</a></strong>
 								<div class="sub-head-list">Junior Accountant</div>
 								<div class="sub-head-list">2009 – 2011</div>
 								<ul>
