--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -211,6 +211,13 @@
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
+							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
+								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
+								<div class="sub-head-list">10/2013 – present</div>
+								<ul>
+									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
+									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
+								</ul>
 							<strong><a href="http://rednissmead.com/" target="_blank">Redniss and Mead Land Use Consulting Firm</a></strong>
 								<div class="sub-head-list">Intern in Planning Department, GIS Specialist</div>
 								<div class="sub-head-list">09/2015 - 12/2015</div>
@@ -247,13 +254,6 @@
 									<li class="resume-list">Functioned as Enterprise GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Focused on researching maps and associated textual documentation, georeferencing these maps to create workable primary source material for students studying Digital Humanities, creating metadata for georeferenced maps and datasets, and heads-up digitizing derivative data for historical analysis</li>
 									<li class="resume-list">Utilized ArcGIS and census data to construct historical GISystems and maps for Virtual Hartford</li>
-								</ul>
-							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
-								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
-								<div class="sub-head-list">10/2013 – 12/2015</div>
-								<ul>
-									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
-									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
 								</ul>
 							<strong><a href="http://www.strictlyaccounting.com/" target="_blank">Strictly Accounting, CPA: Bill Pay U.S.A.</a></strong>
 								<div class="sub-head-list">Junior Accountant</div>
