--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -233,12 +233,13 @@
 									<li class="resume-list">Organized and maintaind museum client files regarding different sponsored events</li>
 									<li class="resume-list">Proofread and peer-reviewed museum publications</li>
 								</ul>
-							<strong>Connecticut State Archeologist, Brian Jones</strong>
-								<div class="sub-head-list">Research Assistant, Online GIS</div>
+							<strong>Office of Connecticut State Archeologist (OSA)</strong>
+								<div class="sub-head-list">Research Assistant, Online GIS Specialist</div>
 								<div class="sub-head-list">09/2014 – 12/2014</div>
 								<ul>
 									<li class="resume-list">In collaboration with the Map and Geographic Information Center and Connecticut State Data Center, I developed an online interface to house and display data of the office of the Connecticut State Archaeologist</li>
 									<li class="resume-list">Mapped Archeological data using Google Fusion Tables platform</li>
+									<li class="resume-list">Worked directly with CT State Archeologist, Brian Jones</li>
 								</ul>
 							<strong><a href="http://geomorphology.uconn.edu/" target="_blank">Geomorphology and Earth Processes Research Team</a> at University of Connecticut</strong>
 								<div class="sub-head-list">Researcher, GIS Analyst, led by Professor Ouimet</div> 
