edited the OSA entry

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -233,7 +233,7 @@
 									<li class="resume-list">Organized and maintaind museum client files regarding different sponsored events</li>
 									<li class="resume-list">Proofread and peer-reviewed museum publications</li>
 								</ul>
-							<strong>Office of Connecticut State Archeologist (OSA)</strong>
+							<strong><a href="http://www.cac.uconn.edu/osa.html" target="_blank">Office of Connecticut State Archeologist (OSA)</a></strong>
 								<div class="sub-head-list">Research Assistant, Online GIS Specialist</div>
 								<div class="sub-head-list">09/2014 – 12/2014</div>
 								<ul>
