--- a/portfolio/portfolio-final/index.html
+++ b/portfolio/portfolio-final/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Zac C. Raslan</title>
+	<title>ZCR Home</title>
 	<meta charset="utf-8">
 	<link href="css/reset.css" rel="stylesheet"></link>
 	<link href="css/style.css" rel="stylesheet"></link>
@@ -61,7 +61,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Last edited by Zachary C. Raslan : April 4, 2016
+		<footer>Last edited by Zachary C. Raslan : April 14, 2016
 		</footer>
 	</a>
 
