resume text edit

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -276,7 +276,7 @@
 									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">GIS & ESRI's ArcGIS (10.4)</a>; Adobe Photoshop; MS Office Suite 2013</li>
 								</ul>
 								<div></div>
-							<strong>Code Languages</strong>
+							<strong>Scripting and Mark-up Languages</strong>
 								<ul>
 									<li class="resume-list">HTML5, CSS3, (Python)</li>
 								</ul>
