--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -291,7 +291,7 @@
 					<section>
 						<h2 class="resume-headline">Interests and Activities</h2>
 							<strong>Academic</strong>
-								<p class="resume-list">Digital Humanities history, Historical Geography, GIS,  Historical GIS, Cliography, Cartography,  Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
+								<p class="resume-list">Digital Humanities history, Historical Geography, GIS,  Historical GIS, Cliography, Cartography, Historiography, Pre/Ancient/Classical history, Cultural history, history of religion and effect on social development with a focus on history of Graeco-Arabic Translation Movement (2CE – 10CE)</p>
 							<strong>Recreational</strong>
 								<p class="resume-list">Crafts and outdoors: Fishing, hiking, camping, wood-working, metal-working; Music: drums, trumpet, guitar, banjo, harmonica, mouth harp, tin whistle; Martial arts: Brazilian Jiu-Jitsu, Krav-Maga, And Tae Kwon Do</P>
 					</section>
