projects page picture and header text

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -42,8 +42,17 @@
 	</nav>
 	
 	<div class="portfolio-container">
+
+		<img class="project-self-img" src="self-img.jpg"/>
+
+		<div class="project-divider"></div>
 		
-		<h2>Projects & Research: GIS, Geospatial, History, and DH</h2>
+		<h2 class="project-main-header">Projects & Research:</h2>
+			<p class="project-main-header">Geographic Information Systems Analysis</p>
+			<p class="project-main-header">Census and Historical Geospatial Data Analysis</p>
+			<p class="project-main-header">Historical Methods of Research</p>
+			<p class="project-main-header">Historiographical Analysis
+			<p class="project-main-header">Digital Humanities</p>
 
 		<h3 class="project-subsection"><a name="Research and Digital Humanities">Research and Digital Humanities</a></h3>
 
