resume computer section edit

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -269,17 +269,79 @@
 
 			<hr>
 
-					<section>
+					<section class="computer-skills-sec">
 						<h2 class="resume-headline">Computer Skills</h2>
-							<strong>Software Packages</strong>
+
+					<div class="resume-computer-subsec-left">
+						<h3>Software Packages</h3>
+							<strong class="resume-computer-subsec-subhead-left">GIS Software</strong>
 								<ul>
-									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">GIS & ESRI's ArcGIS (10.4)</a>; Adobe Photoshop; MS Office Suite 2013</li>
+									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">ArcGIS (10.4) by ESRI</a></li>
 								</ul>
 								<div></div>
-							<strong>Scripting and Mark-up Languages</strong>
+							<strong class="resume-computer-subsec-subhead-left">Adobe and MicroSoft Software</strong>
 								<ul>
-									<li class="resume-list">HTML5, CSS3, (Python)</li>
+									<li class="resume-list">Adobe Photoshop; MS Office Suite 2013</li>
 								</ul>
+					</div>
+
+					<div class="resume-computer-subsec-right">
+						<h3>Computer Based Data Analysis</h3>
+							<strong class="resume-computer-subsec-subhead-right">Database Management Systems</strong>
+								<ul>
+									<li class="resume-list">Flat File Database</li>
+								</ul>
+								<ul>
+									<li class="resume-list">Hierarchical Database</li>
+								</ul>
+								<ul>
+									<li class="resume-list">Relational Database</li>
+								</ul>
+								<div></div>
+							<strong class="resume-computer-subsec-subhead-right">Data Collection and Formatting</strong>
+								<ul>
+									<li class="resume-list">Historical/Archival Research</li>
+								</ul>
+								<ul>
+									<li class="resume-list">Digitization/Synthesization and Georeferencing</li>
+								</ul>
+								<ul>
+									<li class="resume-list">GIS Compatible Formatting</li>
+								</ul>
+								<ul>
+									<li class="resume-list">GPS Data Collection (Trimble GPS)</li>
+								</ul>
+								<div></div>
+							<strong class="resume-computer-subsec-subhead-right">Geospatial Data Modeling</strong>
+								<ul>
+									<li class="resume-list">Raster and Vector Modeling</li>
+								</ul>
+								<ul>
+									<li class="resume-list">Digital Elevation Modeling</li>
+								</ul>
+								<ul>
+									<li class="resume-list">Arc ModelBuilder</li>
+								</ul>
+								<div></div>
+					</div>
+
+					<div class="resume-computer-subsec-left">
+						<h3>Computer Languages</h3>
+							<strong class="resume-computer-subsec-subhead-left">Scripting Languages</strong>
+								<ul>
+									<li class="resume-list">Python</li>
+								</ul>
+								<div></div>
+							<strong class="resume-computer-subsec-subhead-left">Special-purpose Programming Languages</strong>
+								<ul>
+									<li class="resume-list">SQL</li>
+								</ul>
+								<div></div>
+							<strong class="resume-computer-subsec-subhead-left">Mark-up Languages</strong>
+								<ul>
+									<li class="resume-list">HTML5 and CSS3</li>
+								</ul>
+					</div>
 					</section>
 
 			<hr>
