took thesis off

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -79,7 +79,7 @@
 								<div class="sub-head-list">Fall 2015</div> 
 									<ul>
 										<li class="resume-list"><a href="diploma-uconn.pdf" target="_blank">Bachelor of Arts</a> in History, Geographic Information Systems/Sciences (GIS) minor</li>
-										<li class="resume-list"><a href="honors-thesis.pdf" target="_blank">Honors Thesis</a>: ClioGraphy, Historical Geospatial Analysis</li>
+										<li class="resume-list"><!--<a href="honors-thesis.pdf" target="_blank">-->Honors Thesis</a>: ClioGraphy, Historical Geospatial Analysis (under edit)</li>
 									</ul>
 								<div class="sub-head-list">University of Vermont</div>
 								<div class="sub-head-list">Attended: 2011-2012</div>
