--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -215,7 +215,7 @@
 								<div class="sub-head-list">Intern in Planning Department, GIS Specialist</div>
 								<div class="sub-head-list">09/2015 - 12/2015</div>
 								<ul>
-									<li class="resume-list">Worked in Land Use and Planning Department on ecologically diverse projects throughout Fairfield County, CT</li>
+									<li class="resume-list">Worked in Land Use and Planning Department on geographically diverse projects throughout Fairfield County, CT</li>
 									<li class="resume-list">Utilized GIS to create maps of property with accompanying research</li>
 									<li class="resume-list">Researched land records and legal regulations pertinent to client properties in effort to draft regulation variances or project proposals</li>
 								</ul>
