--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -272,6 +272,11 @@
 									<li class="resume-list"><a href="esri-certs-merge.pdf" target="blank">ArcGIS (10.4) by ESRI</a></li>
 								</ul>
 								<div></div>
+							<strong class="resume-computer-subsec-subhead-left">Integrated Development Environment (IDE) Applications</strong>
+								<ul>
+									<li class="resume-list">Eclipse IDE</li>
+								</ul>
+								<div></div>
 							<strong class="resume-computer-subsec-subhead-left">Adobe and MicroSoft Software</strong>
 								<ul>
 									<li class="resume-list">Adobe Photoshop; MS Office Suite 2013</li>
