resume comuter skill part

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -302,7 +302,7 @@
 					</div>
 
 					<div class="resume-computer-subsec-right">
-						<h3>Computer Based Data Analysis</h3>
+						<h3>Computational Data Analytics</h3>
 							<strong class="resume-computer-subsec-subhead-right">Database Management Systems</strong>
 								<ul>
 									<li class="resume-list">Flat File Database</li>
