commented out link to honors thesis

--- a/portfolio/portfolio-final/projects-folder/projects.html
+++ b/portfolio/portfolio-final/projects-folder/projects.html
@@ -97,7 +97,7 @@
 
 			<div class="project-link">
 
-				<a href="honors-thesis.pdf" target="_blank">
+				<!--<a href="honors-thesis.pdf" target="_blank">-->
 				<img class="project-img" src="img-thesis.jpg"/>
 				</a>
 				
