added img of scholarship to website

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -115,7 +115,7 @@
 
 					<section>
 						<h2 class="resume-headline">Scholarships and Research Grants</h2>
-							<strong>William P. O'Hara Endowed Scholar</strong>
+							<strong><a href="img-william-ohara.jpg" target="_blank">William P. O'Hara Endowed Scholar</a></strong>
 								<ul>
 									<li class="resume-list">Awarded scholarship for demonstrating an interest in music and having a record of academic achievement</li>
 								</ul>
