addition of hva information

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -189,6 +189,15 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
+							<strong></strong>
+								<div class="sub-head-list">GIS Manager/Developer</div>
+								<div class="sub-head-list">09/2016 - present</div>
+								<ul>
+									<li class="resume-list">Head of GIS Department</li>
+									<li class="resume-list">Manage HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects include multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Currently re-organizing/centralizing company GIS for greater efficiency among workgroup of GIS users at main office</li>
+									<li class="resume-list">Facilitate the development of regional and local geospatial datasets, managing the collection, formatting, and assimilation of various demographic/environmental/natural resource/geospatial data from a variety of sources – including the creation of data by field sampling</li>
+									<li class="resume-list">Maintain online GIS platforms (ArcGIS for Server Enterprise, ArcSDE, ArcGIS Online, App Studio for ArcGIS) consisting of HVA created regional datasets. Currently in the process of creating mobile Geo-applications for “reporter” and “tour” type function. Update, revise, and create new Web Mapping Services and Web Applications for regional conservation initiatives</li>
+								</ul>
 							<strong>ClioGraphica | Location Intelligence Firm</strong>
 								<div class="sub-head-list">Founder/Operator</div>
 								<div class="sub-head-list">11/2015 - present</div>
@@ -199,14 +208,14 @@
 								</ul>
 							<strong>WyzAnt Tutoring, Inc.</strong>
 								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
-								<div class="sub-head-list">10/2014 - present</div>
+								<div class="sub-head-list">10/2014 - 09/2016</div>
 								<ul>
 									<li class="resume-list">Tutor graduate and undergraduate level GIS practices, system and database administration, and geospatial analytics</li>
 									<li class="resume-list">Graduate and undergraduate level history tutor - focus on analytical writing and Digital Humanities research</li>
 								</ul>
 							<strong><a href="http://omeka1.lib.uconn.edu/welcome" target="_blank">Virtual Hartford Research Team</a></strong>
 								<div class="sub-head-list">Digital Humanities Researcher, GIS Specialist</div>
-								<div class="sub-head-list">10/2013 – present</div>
+								<div class="sub-head-list">10/2013 – 05/2016</div>
 								<ul>
 									<li class="resume-list">Functioned as a geographic information specialist for Virtual Hartford, a team of graduate and undergraduate students who are constructing an educational website dedicated to historical Hartford, CT</li> 
 									<li class="resume-list">Researched, processed, and integrated relevant data to create dynamic cartographic representations of Virtual Hartford research projects</li>
@@ -221,7 +230,7 @@
 								</ul>
 							<strong><a href="http://www.cac.uconn.edu/mnhhome.html" target="_blank">Connecticut State Museum of Natural History</a></strong>
 								<div class="sub-head-list">Student Administrator</div>
-								<div class="sub-head-list">5/2014 – 5/2015</div>
+								<div class="sub-head-list">05/2014 – 05/2015</div>
 								<ul>
 									<li class="resume-list">Organized and maintaind museum client files regarding different sponsored events</li>
 									<li class="resume-list">Proofread and peer-reviewed museum publications</li>
@@ -236,14 +245,14 @@
 								</ul>
 							<strong><a href="http://geomorphology.uconn.edu/" target="_blank">Geomorphology and Earth Processes Research Team</a> at University of Connecticut</strong>
 								<div class="sub-head-list">Researcher, GIS Analyst, led by Professor Ouimet</div> 
-								<div class="sub-head-list">06/10/2014 – 12/10/14</div>
+								<div class="sub-head-list">06/2014 – 12/2014</div>
 								<ul>
 									<li class="resume-list">Study the history, mechanics, and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
 								</ul>
 							<strong><a href="http://ctsdc.uconn.edu/" target="_blank">Connecticut State Data Center</a> & <a href="http://magic.lib.uconn.edu/" target="_blank">Univ. Libraries’ Maps and Geographic Information Center (MAGIC)</a></strong>
 								<div class="sub-head-list">Census and Geospatial Data Assistant, Enterprise GIS Analyst, Historical GIS Specialist, GIS Analyst</div>
-								<div class="sub-head-list">10/2013 – 6/2014</div>
+								<div class="sub-head-list">10/2013 – 06/2014</div>
 								<ul>
 									<li class="resume-list">Functioned as Enterprise GIS analyst in an office which contracted state-wide geospatial data projects</li>
 									<li class="resume-list">Focused on researching maps and associated textual documentation, georeferencing these maps to create workable primary source material for students studying Digital Humanities, creating metadata for georeferenced maps and datasets, and heads-up digitizing derivative data for historical analysis</li>
@@ -287,7 +296,7 @@
 						<h3>Computer Languages</h3>
 							<strong class="resume-computer-subsec-subhead-left">Scripting Languages</strong>
 								<ul>
-									<li class="resume-list">Python</li>
+									<li class="resume-list">Python (beginner)</li>
 								</ul>
 								<div></div>
 							<strong class="resume-computer-subsec-subhead-left">Special-purpose Programming Languages</strong>
@@ -303,7 +312,7 @@
 
 					<div class="resume-computer-subsec-right">
 						<h3>Computational Data Analytics</h3>
-							<strong class="resume-computer-subsec-subhead-right">Database Management Systems</strong>
+							<strong class="resume-computer-subsec-subhead-right">Database Management</strong>
 								<ul>
 									<li class="resume-list">Flat File Database</li>
 								</ul>
