--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -189,8 +189,8 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong></strong>
-								<div class="sub-head-list">GIS Manager / Developer</div>
+							<strong>Housatonic Valley Association</strong>
+								<div class="sub-head-list">GIS Manager/Developer</div>
 								<div class="sub-head-list">09/2016 - present</div>
 								<ul>
 									<li class="resume-list">Head of GIS Department</li>
