--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -189,11 +189,11 @@
 
 					<section>
 						<h2 class="resume-headline">Experience</h2>
-							<strong>Housatonic Valley Association</strong>
-								<div class="sub-head-list">GIS Manager/Developer</div>
+							<strong><a href="http://www.hvatoday.org/" target="_blank">Housatonic Valley Association (HVA)</a></strong>
+								<div class="sub-head-list"><a href="http://www.hvatoday.org/what-we-do/gis-and-maps/mapping-services/" target="_blank">GIS Manager/Developer</div>
 								<div class="sub-head-list">09/2016 - present</div>
 								<ul>
-									<li class="resume-list">Head of GIS Department</li>
+									<li class="resume-list"><a href="http://litchfieldgreenprint.org/who-we-are/staff/" target="_blank">Head of GIS Department</a></li>
 									<li class="resume-list">Manage HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects include multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Currently re-organizing/centralizing company GIS for greater efficiency among workgroup of GIS users at main office</li>
 									<li class="resume-list">Facilitate the development of regional and local geospatial datasets, managing the collection, formatting, and assimilation of various demographic/environmental/natural resource/geospatial data from a variety of sources – including the creation of data by field sampling</li>
 									<li class="resume-list">Maintain online GIS platforms (ArcGIS for Server Enterprise, ArcSDE, ArcGIS Online, App Studio for ArcGIS) consisting of HVA created regional datasets. Currently in the process of creating mobile Geo-applications for “reporter” and “tour” type function. Update, revise, and create new Web Mapping Services and Web Applications for regional conservation initiatives</li>
