--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -190,7 +190,7 @@
 					<section>
 						<h2 class="resume-headline">Experience</h2>
 							<strong><a href="http://www.hvatoday.org/" target="_blank">Housatonic Valley Association (HVA)</a></strong>
-								<div class="sub-head-list"><a href="http://www.hvatoday.org/what-we-do/gis-and-maps/mapping-services/" target="_blank">GIS Manager/Developer</div>
+								<div class="sub-head-list"><a href="http://www.hvatoday.org/what-we-do/gis-and-maps/mapping-services/" target="_blank">GIS Manager/Developer</a></div>
 								<div class="sub-head-list">09/2016 - present</div>
 								<ul>
 									<li class="resume-list"><a href="http://litchfieldgreenprint.org/who-we-are/staff/" target="_blank">Head of GIS Department</a></li>
