geospatial analytics edits

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -339,13 +339,13 @@
 								<div></div>
 							<strong class="resume-computer-subsec-subhead-right">Geospatial Data Modeling</strong>
 								<ul>
-									<li class="resume-list">Raster and Vector Modeling</li>
+									<li class="resume-list">Environmental and Natural Resource Modeling</li>
 								</ul>
 								<ul>
-									<li class="resume-list">Digital Elevation Modeling</li>
+									<li class="resume-list">Demographic Modeling</li>
 								</ul>
 								<ul>
-									<li class="resume-list">Arc ModelBuilder</li>
+									<li class="resume-list">Suitability and Terrain Analysis</li>
 								</ul>
 								<div></div>
 					</div>
