--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -56,7 +56,7 @@
 
 		<header>
 
-			<strong><a class="resume-short" href="resume-short-01-02-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
+			<strong><a class="resume-short" href="resume-short-01-08-17.pdf" target="_blank">One Page (compressed) Resume - follow this link</a></strong>
 
 			<!--<div class="log-divider">. . . . . . .</div>-->
 
@@ -136,7 +136,7 @@
 								<ul>
 									<li class="resume-list">Study the history, mechanics, and evolution of landscapes at human timescales</li>
 									<li class="resume-list">Leveraged ArcGIS software and LiDAR data to construct Digital Elevation Models (DEMs) to identify, geoprocess and map charcoal hearths as part of an investigation pertaining to historical Connecticut geography</li>
-									<li class="resume-list">Click <a href="www.youtube.com" target="_blank">here</a> for a link to Patrick Skahill’s interview of lead professor William Ouimet on wnpr</li>
+									<li class="resume-list">Click <a href="http://wnpr.org/post/laser-scans-reveal-hidden-secrets-connecticuts-industrial-past/" target="_blank">here</a> for a link to Patrick Skahill’s interview of lead professor William Ouimet on wnpr</li>
 								</ul>
 							<strong><a href="http://ctsdc.uconn.edu/" target="_blank">Connecticut State Data Center</a> & <a href="http://magic.lib.uconn.edu/" target="_blank">Univ. Libraries’ Maps and Geographic Information Center (MAGIC)</a></strong>
 								<div class="sub-head-list">Census and Geospatial Data Assistant, Enterprise GIS Analyst, Historical GIS Specialist, GIS Analyst</div>
