--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -92,8 +92,8 @@
 									<li class="resume-list">Owner and Operator of ClioGraphica, a Location Intelligence Firm which aims to provide geospatial intelligence consulting services for non-profits organizations, client businesses, and municipalities</li>
 									<li class="resume-list">Develops Geodatabases for client use by GPS Data Collection Campaign, digitization of organization records, or other available data sources</li>
 									<li class="resume-list">Provide innovative geospatial services utilizing cutting edge technology and data models for a wide variety of clientele</li>
-									<li class="resume-list">Client Reviews:</li>
-									<li class="resume-list"><a href="cliographica-claudia-testimonial-01-07-17.pdf" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
+									<li class="resume-list">Client Reviews:
+									<a href="cliographica-claudia-testimonial-01-07-17.pdf" target="_blank">Claudia Wolen</a>, Education Coordinator, Stamford Historical Society</li>
 								</ul>
 							<strong>WyzAnt Tutoring, Inc.</strong>
 								<div class="sub-head-list">GIS, Geospatial, History, and Digital Humanities Tutor</div>
