hva date edited

--- a/portfolio/portfolio-final/resume.html
+++ b/portfolio/portfolio-final/resume.html
@@ -78,7 +78,7 @@
 						<h2 class="resume-headline">Experience</h2>
 							<strong><a href="http://www.hvatoday.org/" target="_blank">Housatonic Valley Association (HVA)</a></strong>
 								<div class="sub-head-list"><a href="http://www.hvatoday.org/what-we-do/gis-and-maps/mapping-services/" target="_blank">GIS Manager/Developer</a></div>
-								<div class="sub-head-list">09/2016 - present</div>
+								<div class="sub-head-list">09/2016 - 01/2017</div>
 								<ul>
 									<li class="resume-list"><a href="http://litchfieldgreenprint.org/who-we-are/staff/" target="_blank">Head of GIS Department</a></li>
 									<li class="resume-list">Manage HVA’s GIS department which works in coordination with internal departments (i.e. Watershed Planning Department and field crew) and external clients such as local municipalities, land trusts organizations, and individuals seeking GIS analysis or general mapping services. Common GIS projects include multi-variable site selection analysis, environmental/natural resources modeling, parcel editing, and geospatial database creation. Currently re-organizing/centralizing company GIS for greater efficiency among workgroup of GIS users at main office</li>
